# python_project

./: .gitignore  Pipfile  README.md  setup.cfg  setup.py
src/example_blog/: __init__.py  cmdline.py  dao.py  db.py  log.py  middlewares.py  model.py  models.py  routes.py  schemas.py  server.py  services.py  views.py
src/example_blog/config/: __init__.py  setting.local.yml  settings.yml
tests/: __init__.py
