[metadata]
name = example_blog
version = attr: example_blog.__version__
author = andrew
author_email = zengjunjie1026@163.com
description = This is example blog system.
keywords = blog example
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7

[options]
python_requires > = 3.7
include_package_data = True
packages = find:
package_dir =
    =src
install_requires =
    click
    dynaconf


[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    example_blog = example_blog.cmdline:main

[options.package_data]
example_blog.config = settings.yml

[options.data_files]
etc/example_blog = src/example_blog/config/settings.yml
